# pcsxr

./: .appveyor.yml  .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  Dockerfile.clang  Dockerfile.gcc  README
plugins/: CMakeLists.txt
plugins/bladesio1/: CMakeLists.txt
plugins/dfcdrom/: CMakeLists.txt
plugins/dfinput/: CMakeLists.txt
plugins/dfnet/: CMakeLists.txt
plugins/dfsound/: CMakeLists.txt
plugins/dfxvideo/: CMakeLists.txt
plugins/nullsio1/: CMakeLists.txt
plugins/peopsxgl/: CMakeLists.txt
win32/: pcsxr.vcxproj
win32/plugins/PadSSSPSX/: PadSSSPSX.vcxproj
win32/plugins/bladesio1/: bladesio1.vcxproj
win32/plugins/dfsound/: DFSound.vcxproj
win32/plugins/dfxvideo/: DFXVideo.vcxproj
win32/plugins/peopsxgl/: gpuPeopsOpenGL.vcxproj
